fixed image stretch

--- a/src/app/routes/about/about.component.scss
+++ b/src/app/routes/about/about.component.scss
@@ -11,7 +11,6 @@
   min-height: 600px;
 }
 img{
-  margin-top: 20px;
   box-shadow: 0px 25px 82px -31px rgba(0, 0, 0, 0.36);
 }
 .quote {
